--- a/site/includes/components/services.njk
+++ b/site/includes/components/services.njk
@@ -1,28 +1,31 @@
 <section id="services" class="section services bg bg-texture">
   <div class="container mx-auto">
 
-    <h2>Services</h2>
+  <h2>Services</h2>
 
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-16">
+  <div class="services-swiper swiper">
+    <div class="swiper-wrapper">
 
-      <div class="">
-        <h4>Motion picture finishing</h4>
-        <ul>
-          <li>Colour grading</li>
-          <li>VFX and motion graphics</li>
-          <li>Image restoration</li>
-          <li>Beauty and digital make-up</li>
-          <li>Title design</li>
-          <li>End credits</li>
-          <li>Mastering</li>
-          <li>DCP Authoring and theatrical QC</li>
-          <li>Subjective Broadcast QC checks</li>
-          <li>LTO8 data backup</li>
-        </ul>
+      <div class="swiper-slide">
+        <div class="slide-content">
+          <h4>Motion picture finishing</h4>
+          <ul>
+            <li>Colour grading</li>
+            <li>VFX and motion graphics</li>
+            <li>Image restoration</li>
+            <li>Beauty and digital make-up</li>
+            <li>Title design</li>
+            <li>End credits</li>
+            <li>Mastering</li>
+            <li>DCP Authoring and theatrical QC</li>
+            <li>Subjective Broadcast QC checks</li>
+            <li>LTO8 data backup</li>
+          </ul>
+        </div>
       </div>
 
-      <div>
-        <div class="">
+      <div class="swiper-slide">
+        <div class="slide-content">
           <h4>Client services</h4>
           <ul>
             <li>High speed 1300 Mbps WiFi</li>
@@ -31,8 +34,10 @@
             <li>Food, drink, and concierge services available on request</li>
           </ul>
         </div>
+      </div>
 
-        <div class="mt-16 md:mt-8">
+      <div class="swiper-slide">
+        <div class="slide-content">
           <h4>International services</h4>
           <ul>
             <li>Your US$ budget goes much further paying for post-production services in NZ$</li>
@@ -44,24 +49,60 @@
         </div>
       </div>
 
-      <div class="">
-        <h4>Dry hire</h4>
-        <ul>
-          <li>Client facing suite available for short and long term dry hire</li>
-          <li>Configurable for both colour/finishing and offline editing</li>
-          <li>Sony OLED reference monitoring</li>
-          <li>LG 55" OLED client monitor</li>
-          <li>DaVinci Resolve Studio</li>
-          <li>Avid Media Composer</li>
-          <li>Adobe Creative Cloud</li>
-          <li>18TB direct attached Raid for near-archive</li>
-          <li>6TB direct attached SSD Raid for blistering fast cache</li>
-          <li>LTO8 deck</li>
-          <li>All mounted in a tidy and mobile 16RU rack -- come work onsite or wheel it out the door to take on-set</li>
-        </ul>
+      <div class="swiper-slide">
+        <div class="slide-content">
+          <h4>Dry hire</h4>
+          <ul>
+            <li>Client facing suite available for short and long term dry hire</li>
+            <li>Configurable for both colour/finishing and offline editing</li>
+            <li>Sony OLED reference monitoring</li>
+            <li>LG 55" OLED client monitor</li>
+            <li>DaVinci Resolve Studio</li>
+            <li>Avid Media Composer</li>
+            <li>Adobe Creative Cloud</li>
+            <li>18TB direct attached Raid for near-archive</li>
+            <li>6TB direct attached SSD Raid for blistering fast cache</li>
+            <li>LTO8 deck</li>
+            <li>All mounted in a tidy and mobile 16RU rack -- come work onsite or wheel it out the door to take on-set</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="swiper-slide">
+        <div class="slide-content">
+          <h4>AI/Machine Learning</h4>
+          <ul>
+            <li>Next-gen denoising</li>
+            <li>Super slow-motion frame interpolation</li>
+            <li>VO overdubs with custom voice models</li>
+            <li>Upscaling</li>
+            <li>Deinterlacing</li>
+            <li>Transcription</li>
+            <li>Audio clean-up and voice isolation</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="swiper-slide">
+        <div class="slide-content">
+          <h4>VFX</h4>
+          <ul>
+            <li>Specialising in invisible VFX</li>
+            <li>Paint outs</li>
+            <li>Set clean ups and extensions</li>
+            <li>Logo replacements</li>
+            <li>Screen inserts</li>
+            <li>Sky replacements</li>
+          </ul>
+        </div>
       </div>
 
     </div>
 
+    <div class="swiper-pagination"></div>
+
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
   </div>
+
 </section>
