small copy tidy up

--- a/site/includes/components/services.njk
+++ b/site/includes/components/services.njk
@@ -11,8 +11,10 @@
           <h4>Motion picture finishing</h4>
           <ul>
             <li>Colour grading</li>
-            <li>VFX and motion graphics</li>
+            <li>Film emulation</li>
             <li>Image restoration</li>
+            <li>VFX</li>
+            <li>Motion graphics</li>
             <li>Beauty and digital make-up</li>
             <li>Title design</li>
             <li>End credits</li>
@@ -28,23 +30,24 @@
         <div class="slide-content">
           <h4>Client services</h4>
           <ul>
-            <li>High speed 1300 Mbps WiFi</li>
-            <li>Fibre optic internet connection</li>
+            <li>Fast fibre optic internet</li>
+            <li>Easy access to power for device charging</li>
             <li>Fully stocked bar fridge</li>
-            <li>Food, drink, and concierge services available on request</li>
+            <li>Food, drink, and concierge services available with advance notice</li>
           </ul>
         </div>
       </div>
 
       <div class="swiper-slide">
         <div class="slide-content">
-          <h4>International services</h4>
+          <h4>Remote services</h4>
           <ul>
-            <li>Your US$ budget goes much further paying for post-production services in NZ$</li>
-            <li>Remote colour grading</li>
-            <li>High Speed fibre optic data transfers</li>
+            <li>Available for remote grading worldwide</li>
+            <li>High quality remote reference monitoring</li>
+            <li>Fast fibre optic data transfers</li>
             <li>Rushes and DIT</li>
             <li>Talk to us about putting you in touch with some of New Zealand's best Line Producers</li>
+            <li>Your US$ budget goes much further paying for post-production services in NZ$</li>
           </ul>
         </div>
       </div>
@@ -53,17 +56,18 @@
         <div class="slide-content">
           <h4>Dry hire</h4>
           <ul>
-            <li>Client facing suite available for short and long term dry hire</li>
+            <li>Client facing suite available for short term dry hire</li>
             <li>Configurable for both colour/finishing and offline editing</li>
             <li>Sony OLED reference monitoring</li>
             <li>LG 55" OLED client monitor</li>
             <li>DaVinci Resolve Studio</li>
             <li>Avid Media Composer</li>
             <li>Adobe Creative Cloud</li>
-            <li>18TB direct attached Raid for near-archive</li>
-            <li>6TB direct attached SSD Raid for blistering fast cache</li>
+            <li>Nobe Omniscope</li>
+            <li>Direct attached Raid for near-archive</li>
+            <li>Fast SSD cache</li>
             <li>LTO8 deck</li>
-            <li>All mounted in a tidy and mobile 16RU rack -- come work onsite or wheel it out the door to take on-set</li>
+            <li>All mounted in a tidy and mobile 16RU rack</li>
           </ul>
         </div>
       </div>
@@ -78,7 +82,7 @@
             <li>Upscaling</li>
             <li>Deinterlacing</li>
             <li>Transcription</li>
-            <li>Audio clean-up and voice isolation</li>
+            <li>Audio clean-up</li>
           </ul>
         </div>
       </div>
@@ -93,6 +97,7 @@
             <li>Logo replacements</li>
             <li>Screen inserts</li>
             <li>Sky replacements</li>
+            <li>On-set supervision</li>
           </ul>
         </div>
       </div>
